fix UserName.css Align EntryHeader.css

--- a/src/assets/styles/cmps/elements/EntryHeader.scss
+++ b/src/assets/styles/cmps/elements/EntryHeader.scss
@@ -3,8 +3,9 @@
     justify-content: space-between;
     align-content: center;
     // padding-bottom: rem(12px);
-
+    
     .prof-preview {
+        gap: rem(12px);
         display: flex;
         align-items: center;
     }
