--- a/src/assets/styles/cmps/elements/UserName.scss
+++ b/src/assets/styles/cmps/elements/UserName.scss
@@ -2,5 +2,4 @@
         font-size: 1rem;
         color: $ig-primory-clr;
         font-weight: bold;
-        padding-left: 1rem;
 }
